[project]
name = "profit-platform"
version = "0.1.0"
description = "Pricing intelligence SaaS starter kit"
readme = "README.md"
authors = [{name = "AI Assistant"}]
requires-python = ">=3.11"

[project.scripts]
profit-platform = "profit_platform.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
